--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "name": "Coursera Quicksave",
-    "version": "0.0.0.2",
+    "version": "0.0.0.3",
     "manifest_version": 3,
-    "description": "Click the button!",
+    "description": "A simple extension to make downloading Coursera transcripts easier and cleaner",
     "author": "Bailey Douglass",
     "icons": {
         "16": "icons/icon16x16.png",
@@ -16,10 +16,9 @@
     "content_scripts": [
         {
             "matches": [
-              "https://www.coursera.org/learn/*"
+              "https://www.coursera.org/*"
             ],
-            "js": ["lib/jquery-3.6.1.min.js", "content-scripts/content.js"]
+            "js": ["content-scripts/content.js"]
         }
-    ],
-    "permissions": [ "downloads"]
+    ]
 }
